changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -174,7 +174,7 @@
           </span>
         </div>
         <div *ngIf="isViewShift" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/shift/viewShift">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -184,7 +184,7 @@
           </span>
         </div>
         <div *ngIf="isAddShiftTime" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/shift/addShiftTime">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -214,7 +214,7 @@
           </span>
           <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
             <div *ngIf="isBookShiftWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/shiftWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -224,7 +224,7 @@
               </span>
             </div>
             <div *ngIf="isBookDayWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/dayWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -234,7 +234,7 @@
               </span>
             </div>
             <div *ngIf="isBookMonthWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/monthWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -244,7 +244,7 @@
               </span>
             </div>
             <div *ngIf="isBookShiftTimeWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/shiftTimeWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -254,7 +254,7 @@
               </span>
             </div>
             <div *ngIf="isBookOperatorWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/operatorWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -287,7 +287,7 @@
               </span>
             </div>
             <div *ngIf="isStaffAttendance" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/attendance">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -297,7 +297,7 @@
               </span>
             </div>
             <div *ngIf="isStaffSalary" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/staffSalary">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
